# addon

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPROVEMENT_PLAN.md  README.md  package.json
.github/workflows/: ci.yml  release.yml
addon-core/: Cargo.toml  README.md
addon-core/src/: actions.rs  config.rs  conflict.rs  error.rs  ipc.rs  keymap.rs  lib.rs  log.rs  mapper.rs  os.rs
addon-daemon/: Cargo.toml  README.md
addon-daemon/src/: daemon.rs  ipc.rs  log.rs  main.rs
addon-gui/: Cargo.toml  README.md  index.html  tauri.conf.json
addon-gui/src/: commands.rs  config_ops.rs  main.rs  tray.rs
addon-gui/src-tauri/: tauri.conf.json
addon-gui/src-tauri/capabilities/: default.json
addon-gui/src-tauri/src/: commands.rs  config_ops.rs  ipc_client.rs  main.rs
addon-linux/: Cargo.toml  README.md
addon-linux/src/: lib.rs
addon-macos/: Cargo.toml  README.md
addon-macos/src/: hotkey.rs  lib.rs
addon-windows/: Cargo.toml  README.md
addon-windows/src/: lib.rs
config/: README.md
docs/: README.md  USAGE.md
src/: README.md
