[workspace]
members = [
    "addon-core",
    "addon-linux",
    "addon-daemon",
]
# macOS and Windows crates are platform-specific and excluded from
# cross-compilation. Enable them on their respective platforms:
# macos:   "addon-macos"
# windows: "addon-windows"
exclude = ["addon-macos", "addon-windows", "addon-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moongun80/addon"
authors = ["건 장 <moongun80@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
addon-core = { path = "addon-core" }
addon-linux = { path = "addon-linux" }
