[package]
name = "addon-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Daemon binary for the addon — background service with IPC support"

[dependencies]
addon-core = { path = "../addon-core" }
addon-macos = { path = "../addon-macos", optional = true }
addon-windows = { path = "../addon-windows", optional = true }
addon-linux = { path = "../addon-linux", optional = true }
tokio = { workspace = true, features = ["full", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json = "1"
cfg-if = "1"
flume = "0.11"
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true

[features]
default = []
macos = ["addon-macos"]
windows = ["addon-windows"]
linux = ["addon-linux"]

[[bin]]
name = "addon"
path = "src/main.rs"
