[package]
name = "addon-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Daemon binary for the addon — background service with IPC support"

[dependencies]
addon-core = { path = "../addon-core" }
addon-linux = { path = "../addon-linux", optional = true }
tokio = { workspace = true, features = ["full", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json = "1"
cfg-if = "1"
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true

# macOS and Windows adapters are excluded from the workspace on Linux.
# To build on those platforms, add the respective crates to workspace members
# and uncomment the optional dependency here:
# addon-macos = { path = "../addon-macos", optional = true }
# addon-windows = { path = "../addon-windows", optional = true }

[features]
default = ["linux"]
macos = []
windows = []
linux = ["dep:addon-linux"]

[[bin]]
name = "addon"
path = "src/main.rs"
