[package]
name = "addon-gui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "addon GUI — Key Shortcut Sync Tool"
repository = "https://github.com/moongun80/addon"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

[workspace]
members = ["."]
