[package]
name = "addon-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux adapter for the addon — platform-specific X11 key binding hooks"

[dependencies]
addon-core = { path = "../addon-core" }
x11 = "2"
tracing = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("linux"))'] }
