[package]
name = "addon-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS adapter for the addon — platform-specific key binding hooks"

[dependencies]
addon-core = { path = "../addon-core" }
cocoa = "0.26"
core-foundation = "0.10"
tracing = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("macos"))'] }
